Make ARMI::SwitchOutputDevice work after Stop is called.

BUG=644622

Review-Url: https://codereview.chromium.org/2359883002
Cr-Commit-Position: refs/heads/master@{#420269}

Former-commit-id: 4f36a74f8081e3830a9c9fb48854c1a831cf6086