media/base/audio_renderer_mixer_input.h
@@ -100,12 +100,6 @@ class MEDIA_EXPORT AudioRendererMixerInput
   // Error callback for handing to AudioRendererMixer.
   const base::Closure error_cb_;
 
-  // Pending switch-device callback, in case SwitchOutputDevice() is invoked
-  // before Start()
-  OutputDeviceStatusCB pending_switch_callback_;
-  std::string pending_switch_device_id_;
-  url::Origin pending_switch_security_origin_;
-
   DISALLOW_COPY_AND_ASSIGN(AudioRendererMixerInput);
 };
 
